# telegram-storage

./: .dockerignore  .gitignore  README.md  alembic.ini  docker-compose.yml  entrypoint-migrations.sh  entrypoint.sh  main.py  messages.py  pyproject.toml  utils.py
.docker/: Dockerfile
bot/: handlers.py  keyboards.py  main.py  messages.py  settings.py  utils.py
common/: models.py  settings.py
common/crud/: __init__.py  files.py  users.py
migrations/: env.py
migrations/versions/: 20230316_2216-59cf6296e05b.py
